
 Improvements:
 =============

 ** anova1: added extra feature for performing Welch's ANOVA (PR #15)

 ** anovan: fully Matlab compatible, extra features. (patch #10123, PR #1-42)

 ** binopdf: implement high accuracy Loader algorithm for m>=10 (bug #34362)

 ** cdf: extended to include all available distributions

 ** crosstab: can handle char arrays, fixed ordering of groups

 ** geomean: fully Matlab compatible. (patch #59410)

 ** gevlike: fully Matlab compatible. ACOV output is the inverse Fisher Inf Mat

 ** grp2idx (fully Matlab compatible, indexes in order of appeearance)

 ** harmmean: fully Matlab compatible.

 ** hygepdf: added optional parameter "vectorexpand" to facilitate
    vectorization of other hyge functions. Allows different inputs lengths
    for x and t,m,n parameters, with broadcast expanded output (bug #34363)

 ** hygecdf: improved vectorization for non-scalar inputs.
    hygeinv
    hygernd

 ** ismissing: corrects handling of n-D arrays, NaN indicators, and improves
    matlab compatibility for different data types. (patch #10102)

 ** kmeans: improved help file, evaluate efficiency (bug #8959)

 ** laplace_cdf: allow for parameters mu and scale (bug #58688)
    laplace_inv
    laplace_pdf
    logistic_cdf
    logistic_inv
    logistic_pdf

 ** logistic_regression: fixed incorrect results (bug #60348)

 ** mvncdf: improved performance and accuracy (bug #44130)

 ** normplot: fix ploting error (bug #62394), updated features

 ** pdf: extended to include all available distributions

 ** pdist: updated the 'cosine' metric to be more efficient (bug #62495)

 ** rmmissing: corrects cellstr array handling and
    improves matlab compatibility for different data types. (patch #10102)

 ** signtest: fix erroneous results, fully Matlab compatible (bug #49961)

 ** ttest2: can hale NaN values as missing data (bug #58697)

 ** violin: fix parsing color vector affecting Octave>=6.1.0 (bug #62805)
