@@ -1,5 +1,8 @@
 ## Copyright (C) 2012 Rik Wehbring
 ## Copyright (C) 1995-2016 Kurt Hornik
+## Copyright (C) 2022 Andreas Bertsatos <abertsatos@biol.uoa.gr>
+##
+## This file is part of the statistics package for GNU Octave.
 ##
 ## This program is free software: you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
@@ -21,9 +24,6 @@
 ## at @var{x} of the Gamma distribution with shape parameter @var{a} and
 ## scale @var{b}.
 ## @end deftypefn
-
-## Author: KH <Kurt.Hornik@wu-wien.ac.at>
-## Description: Quantile function of the Gamma distribution
 
 function inv = gaminv (x, a, b)
 
@@ -48,7 +48,7 @@ function inv = gaminv (x, a, b)
     inv = zeros (size (x));
   endif
 
-  k = ((x < 0) | (x > 1) | isnan (x)
+  k = ((x < 0) | (x > 1) | isnan (x) ...
        | !(a > 0) | !(a < Inf) | !(b > 0) | !(b < Inf));
   inv(k) = NaN;
 
@@ -66,40 +66,17 @@ function inv = gaminv (x, a, b)
     endif
     x = x(k);
 
-    if (isa (x, "single"))
-      myeps = eps ("single");
-    else
-      myeps = eps;
-    endif
-
-    l = find (x < myeps);
-    if (any (l))
-      y(l) = sqrt (myeps) * ones (length (l), 1);
-    endif
-
-    y_new = y;
-    loopcnt = 0;
-    do
-      y_old = y_new;
-      h     = (gamcdf (y_old, a, b) - x) ./ gampdf (y_old, a, b);
-      y_new = y_old - h;
-      ind   = find (y_new <= myeps);
-      if (any (ind))
-        y_new(ind) = y_old(ind) / 10;
-        h = y_old - y_new;
-      endif
-    until (max (abs (h)) < sqrt (myeps) || ++loopcnt == 40)
-
-    if (loopcnt == 40)
+    ## Call GAMMAINCINV to find a root of GAMMAINC
+    q = gammaincinv (x, a);
+    tol = sqrt (eps (ones ("like", q)));
+    check_cdf = ((abs (gammainc (q, a) - x) ./ x) > tol);
+    ## Check for any cdf being far off from tolerance
+    if (any (check_cdf(:)))
       warning ("gaminv: calculation failed to converge for some values");
     endif
-
-    inv(k) = y_new;
-
+    inv(k) = q .* b;
   endif
-
 endfunction
-
 
 %!shared x
 %! x = [-1 0 0.63212055882855778 1 2];
@@ -109,6 +86,14 @@ endfunction
 %!assert (gaminv (x, [1 -Inf NaN Inf 1], 1), [NaN NaN NaN NaN NaN])
 %!assert (gaminv (x, 1, [1 -Inf NaN Inf 1]), [NaN NaN NaN NaN NaN])
 %!assert (gaminv ([x(1:2) NaN x(4:5)], 1, 1), [NaN 0 NaN Inf NaN])
+%!assert (gaminv ([x(1:2) NaN x(4:5)], 1, 1), [NaN 0 NaN Inf NaN])
+
+## Test for accuracy when x is small. Results compared to Matlab
+%!assert (gaminv (1e-16, 1, 1), 1e-16, eps)
+%!assert (gaminv (1e-16, 1, 2), 2e-16, eps)
+%!assert (gaminv (1e-20, 3, 5), 1.957434012161815e-06, eps)
+%!assert (gaminv (1e-15, 1, 1), 1e-15, eps)
+%!assert (gaminv (1e-35, 1, 1), 1e-35, eps)
 
 ## Test class of input preserved
 %!assert (gaminv ([x, NaN], 1, 1), [NaN 0 1 Inf NaN NaN], eps)
